# velais-fastapi-base-scaffold

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.debug  Dockerfile.prod  Dockerfile.stg  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/config/: limiter.py  settings.py
app/configuration/: limiter.py  settings.py
app/database/: __init__.py
app/handlers/: rate_limit_exceeded_handler.py
app/models/responses/: health_response.py  rate_limit_exceeded_response.py
app/routers/: health_check.py
app/schemas/: __init__.py  health_response.py
app/utils/: cors.py
docs/: CORS_CONFIGURATION.md  DEVELOPMENT_GUIDE.md  MYPY_GUIDE.md  RUFF_MIGRATION.md  SCHEMA_QUICK_REFERENCE.md
scripts/: pre_commit_check.sh  type_check.sh
src/: main.py
src/config/: limiter.py  settings.py
src/handlers/: rate_limit_exceeded.py
src/routers/: health.py
src/schemas/: __init__.py  limiter.py
src/utils/: __init__.py
tests/: conftest.py  test_cors.py  test_health.py  test_health_check.py
