[project]
name = "velais-fastapi-scaffold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.11",
    "httpx==0.24.0",
    "pydantic-settings==2.8.1",
    "pytest==7.2.2",
    "python-dotenv==1.0.1",
    "slowapi==0.1.9",
    "uvicorn==0.34.0",
]
